<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa">

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/acc_toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="@android:color/white"
      android:elevation="4dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

      <ImageView
          android:id="@+id/ic_back"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          app:srcCompat="@drawable/acc_back_icon" />

      <TextView
          android:id="@+id/acc_title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="15"
          android:fontFamily="@font/sf_pro_display_regular"
          android:text="Settings and activity"
          android:textSize="16sp"
          android:textStyle="bold" />

    </LinearLayout>
  </androidx.appcompat.widget.Toolbar>

  <View
      android:id="@+id/acc_toolbar_line"
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="#e9eaeb"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/acc_toolbar" />

  <ScrollView
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/acc_toolbar_line">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <LinearLayout
          android:id="@+id/acc_container"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginTop="8dp"
          android:layout_marginEnd="8dp"
          android:background="@drawable/acc_bg_rounded_border"
          android:orientation="vertical"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_marginBaseline="16dp">

        <TextView
            android:id="@+id/acc_header_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="Account"
            android:textSize="16sp" />

        <View
            android:id="@+id/acc_line_account"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e9eaeb" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:orientation="vertical"
            android:paddingLeft="18dp"
            android:paddingRight="18dp">

          <LinearLayout
              android:id="@+id/acc_account_user_row"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginBottom="12dp"
              android:orientation="horizontal">

            <ImageView
                android:id="@+id/acc_account_ic_user"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                app:srcCompat="@drawable/acc_profile" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

              <TextView
                  android:id="@+id/acc_account_name"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:fontFamily="@font/sf_pro_display_regular"
                  android:text="@string/acc_username"
                  android:textSize="16sp" />

              <TextView
                  android:id="@+id/acc_account_email"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:fontFamily="@font/sf_pro_display_regular"
                  android:text="@string/acc_email"
                  android:textColor="#807e7e"
                  android:textSize="16sp" />
            </LinearLayout>

          </LinearLayout>

          <LinearLayout
              android:id="@+id/acc_account_sign_out_row"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="12dp"
              android:orientation="horizontal">

            <ImageView
                android:id="@+id/acc_account_ic_sign_out"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                app:srcCompat="@drawable/acc_img" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

              <TextView
                  android:id="@+id/acc_account_sign_out"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:fontFamily="@font/sf_pro_display_regular"
                  android:text="Sign Out"
                  android:textSize="16sp" />

            </LinearLayout>

          </LinearLayout>

        </LinearLayout>

      </LinearLayout>

      <LinearLayout
          android:id="@+id/acc_notification"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginTop="8dp"
          android:layout_marginEnd="8dp"
          android:background="@drawable/acc_bg_rounded_border"
          android:orientation="vertical"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/acc_container"
          app:layout_marginBaseline="16dp">

        <TextView
            android:id="@+id/acc_header_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/acc_header_notifications"
            android:textSize="16sp" />

        <View
            android:id="@+id/acc_line_notification"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e9eaeb" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:orientation="vertical"
            android:paddingLeft="18dp"
            android:paddingRight="18dp">

          <LinearLayout
              android:id="@+id/acc_notification_expiry_row"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginBottom="12dp"
              android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">

              <TextView
                  android:id="@+id/acc_notification_expiry_title"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:fontFamily="@font/sf_pro_display_regular"
                  android:text="@string/acc_expiry_reminders"
                  android:textSize="16sp" />

              <TextView
                  android:id="@+id/acc_notification_expiry_desc"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:fontFamily="@font/sf_pro_display_regular"
                  android:text="@string/acc_expiry_desc"
                  android:textColor="#807e7e"
                  android:textSize="16sp" />
            </LinearLayout>

            <Switch
                android:id="@+id/acc_switch_expiry"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="3" />

          </LinearLayout>

          <LinearLayout
              android:id="@+id/acc_notification_shopping_row"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginBottom="12dp"
              android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">

              <TextView
                  android:id="@+id/acc_notification_shopping_title"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:fontFamily="@font/sf_pro_display_regular"
                  android:text="@string/acc_shopping_reminders"
                  android:textSize="16sp" />

              <TextView
                  android:id="@+id/acc_notification_reminder_desc"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:fontFamily="@font/sf_pro_display_regular"
                  android:text="@string/acc_shopping_desc"
                  android:textColor="#807e7e"
                  android:textSize="16sp" />
            </LinearLayout>

            <Switch
                android:id="@+id/acc_switch_shopping"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="3" />

          </LinearLayout>

          <LinearLayout
              android:id="@+id/acc_notification_recipe_row"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginBottom="12dp"
              android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">

              <TextView
                  android:id="@+id/acc_notification_recipe"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:fontFamily="@font/sf_pro_display_regular"
                  android:text="@string/acc_recipe_suggestions"
                  android:textSize="16sp" />

              <TextView
                  android:id="@+id/acc_notification_recipe_desc"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:fontFamily="@font/sf_pro_display_regular"
                  android:text="@string/acc_recipe_desc"
                  android:textColor="#807e7e"
                  android:textSize="16sp" />
            </LinearLayout>

            <Switch
                android:id="@+id/acc_switch_recipe"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="3" />

          </LinearLayout>

          <LinearLayout
              android:id="@+id/acc_notification_low_stock_row"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginBottom="12dp"
              android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">

              <TextView
                  android:id="@+id/acc_notification_low_stock_title"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:fontFamily="@font/sf_pro_display_regular"
                  android:text="@string/acc_low_stock"
                  android:textSize="16sp" />

              <TextView
                  android:id="@+id/acc_low_stock_desc"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:fontFamily="@font/sf_pro_display_regular"
                  android:text="@string/acc_low_stock_desc"
                  android:textColor="#807e7e"
                  android:textSize="16sp" />
            </LinearLayout>

            <Switch
                android:id="@+id/acc_switch_low_stock"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="3" />

          </LinearLayout>

        </LinearLayout>

      </LinearLayout>

      <LinearLayout
          android:id="@+id/acc_about"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginTop="8dp"
          android:layout_marginEnd="8dp"
          android:background="@drawable/acc_bg_rounded_border"
          android:orientation="vertical"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/acc_notification"
          app:layout_marginBaseline="16dp">

        <TextView
            android:id="@+id/acc_header_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/acc_header_about"
            android:textSize="16sp" />

        <View
            android:id="@+id/acc_line_about"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e9eaeb" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:orientation="vertical"
            android:paddingLeft="18dp"
            android:paddingRight="18dp">

          <LinearLayout
              android:id="@+id/acc_about_help_row"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginBottom="12dp"
              android:orientation="horizontal">

            <ImageView
                android:id="@+id/acc_about_ic_help"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                app:srcCompat="@drawable/acc_help" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

              <TextView
                  android:id="@+id/acc_about_help_title"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:fontFamily="@font/sf_pro_display_regular"
                  android:text="@string/acc_help_support"
                  android:textSize="16sp" />

              <TextView
                  android:id="@+id/acc_about_help_desc"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:fontFamily="@font/sf_pro_display_regular"
                  android:text="@string/acc_help_support_desc"
                  android:textColor="#807e7e"
                  android:textSize="16sp" />
            </LinearLayout>

          </LinearLayout>

          <LinearLayout
              android:id="@+id/acc_about_version_row"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="12dp"
              android:orientation="horizontal">

            <ImageView
                android:id="@+id/acc_about_ic_info"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                app:srcCompat="@drawable/acc_info" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

              <TextView
                  android:id="@+id/acc_app_version"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:fontFamily="@font/sf_pro_display_regular"
                  android:text="@string/acc_app_version"
                  android:textSize="16sp" />

              <TextView
                  android:id="@+id/acc_app_version_desc"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:fontFamily="@font/sf_pro_display_regular"
                  android:text="@string/acc_app_version_desc"
                  android:textColor="#807e7e"
                  android:textSize="16sp" />

            </LinearLayout>

          </LinearLayout>

        </LinearLayout>

      </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
  </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>