<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ic_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/acc_back_icon" />

            <TextView
                android:id="@+id/profile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="15"
                android:fontFamily="@font/sf_pro_display_regular"
                android:text="@string/profile_title"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/profile_username_container"
        android:layout_width="409dp"
        android:layout_height="103dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_toolbar">

        <TextView
            android:id="@+id/profile_username_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/acc_username"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/profile_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/acc_bg_rounded_border"
            android:ems="10"
            android:fontFamily="@font/sf_pro_display_regular"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="14dp"
            android:text="@string/acc_username"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/proifle_email_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_username_container">

        <TextView
            android:id="@+id/profile_email_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/profile_email"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/acc_bg_rounded_border"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="14dp"
            android:text="@string/acc_email"
            android:textColor="#807e7e"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_password_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/proifle_email_container">

        <TextView
            android:id="@+id/profile_password_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/profile_password"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/profile_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/acc_bg_rounded_border"
            android:ems="10"
            android:fontFamily="@font/sf_pro_display_regular"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="14dp"
            android:text="@string/profile_password"
            android:textSize="14sp" />

    </LinearLayout>

    <Button
        android:id="@+id/profile_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/profile_bg_square_button"
        android:text="Submit"
        android:textColor="@android:color/black"
        android:minHeight="48dp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_password_container"
        app:layout_constraintVertical_bias="0.16" />

</androidx.constraintlayout.widget.ConstraintLayout>